# policy-rationalization

./: .gitignore  README.md  pyproject.toml
data/sample_docs/: policy_a.md  policy_b.md  policy_c.md
docs/: analysis.mjs  app.mjs  index.html  redline.mjs  requirement-level-rationalization-plan.md  sample-data.mjs  styles.css
docs/version-compare/: app.js  index.html  styles.css
src/compliance_rationalizer/: __init__.py  cli.py  grouping.py  ingest.py  models.py  reporting.py  rules.py  sample_data.py  similarity.py  url_ingest.py  webapp.py
tests/: pages_analysis.test.mjs  pages_demo_mode.test.mjs  pages_exports.test.mjs  pages_loading.test.mjs  pages_workflow_stepper.test.mjs  test_grouping.py  test_ingest.py  test_sample_data.py  test_similarity.py  test_url_ingest.py
